--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
     <!-- First Container -->
     <div id="kimdir" class="container-fluid bg-1 text-center">
         <h3 class="margin">Merhaba, Mert can ÇETİNKAYA!</h3>
-        <img src="DSC_0169 (2).jpg"alt= width="250" height="250">
-        <h3>elektirik teknisyeni 
+        <h3>Elektirik teknisyeni 
         </h3>
     </div>
      <!-- Second Container -->
@@ -119,7 +118,7 @@
         <!-- Third Container (Grid) -->
     <div id="blog" class="container-fluid bg-3 text-center">
         <h3 class="margin">özgecmiş </h3>
-        <a href="https://prnt.sc/-bROoDtKZfE8">özgeçmiş.com!</a>
+        <a href="https://prnt.sc/-bROoDtKZfE8">Özgeçmiş.com!</a>
         <br>
         <div class="row">
             <div class="col-sm-4">
