--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#kimdir">Kimdir?</a></li>
                     <li><a href="#neyapar">Ne yapar?</a></li>
-                    <li><a href="#blog">özgeçmiş</a></li>
+                    <li><a href="#blog">Özgeçmiş</a></li>
                     <li><a href="#iletisim">İletişim</a></li>
                 </ul>
             </div>
@@ -117,7 +117,7 @@
     </div>
         <!-- Third Container (Grid) -->
     <div id="blog" class="container-fluid bg-3 text-center">
-        <h3 class="margin">özgecmiş </h3>
+        <h3 class="margin">Özgecmiş </h3>
         <a href="https://prnt.sc/-bROoDtKZfE8">Özgeçmiş.com!</a>
         <br>
         <div class="row">
