--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <!-- First Container -->
     <div id="kimdir" class="container-fluid bg-1 text-center">
         <h3 class="margin">Merhaba, Mert can ÇETİNKAYA!</h3>
-        <img src="DSC_0169 (2).jpg"alt= width="250" height="250">
-        <h3>elektirik teknisyeni 
+
+        <h3>Elektirik teknisyeni 
         </h3>
     </div>
      <!-- Second Container -->
